# winyl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  compile_commands.json  meson.build  odinfmt.json
res/: resource.h  resources.rc
src/: inter.hpp  main.cpp  resources.rc  station.cpp  station.hpp  winyl.cc  winyl.cpp  winyl.hpp  winyl.odin
